--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>BRWiki</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
 	-webkit-box-sizing: border-box;
